namespaces/live.cloud-platform.service.justice.gov.uk/cica-copilot-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "cica-copilot-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "CICA"
    cloud-platform.justice.gov.uk/slack-channel: "cica-digital"
    cloud-platform.justice.gov.uk/application: "CICA Knowledge Hub"
    cloud-platform.justice.gov.uk/owner: "CICA: infrastructure@cica.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cica-copilot"
    cloud-platform.justice.gov.uk/team-name: "cica-copilot-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
